--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "moment": "^2.24.0",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
+    "react-animate-on-change": "^2.2.0",
     "react-dom": "^16.8.6",
     "react-headroom": "^2.2.8",
     "react-moment": "^0.9.2",
@@ -14,6 +15,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
     "react-tradingview-widget": "^1.3.0",
+    "react-transition-group": "^4.2.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
