--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.5"
+    "mongoose": "^5.6.5",
+    "nodemailer": "^6.3.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.1",
