--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "react-dom": "^16.8.6",
     "react-headroom": "^2.2.8",
     "react-moment": "^0.9.2",
+    "react-number-format": "^4.2.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
     "react-tooltip": "^3.10.0",
     "react-tradingview-widget": "^1.3.0",
     "react-transition-group": "^4.2.2",
+    "react-twitter-embed": "^2.0.8",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
