--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.6",
     "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-animate-on-change": "^2.2.0",
     "react-dom": "^16.8.6",
     "react-headroom": "^2.2.8",
     "react-moment": "^0.9.2",
